backend/config/k8s/people-course-mongo-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: people-course-mongo-stateful
spec:
  serviceName: people-course-mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: people-course-mongo
  template:
    metadata:
      labels:
        app: people-course-mongo
    spec:
      containers:
        - name: people-course-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: pvc
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: people-course-mongo-service
spec:
  clusterIP: None
  selector:
    app: people-course-mongo
  ports:
    - name: database
      protocol: TCP
      port: 27017
      targetPort: 27017
