backend/config/k8s/real-front-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: real-frontend
  template:
    metadata:
      labels:
        app: real-frontend
    spec:
      containers:
        - name: real-frontend
          image: protoimages/realfront
---
apiVersion: v1
kind: Service
metadata:
  name: real-frontend-service
spec:
  selector:
    app: real-frontend
  ports:
    - name: real-frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
