backend/config/k8s/s3-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3
  template:
    metadata:
      labels: 
        app: s3
    spec:
      containers:
        - name: s3
          image: protoimages/s3-service

---
apiVersion: v1
kind: Service
metadata:
  name: s3-service
spec:
  selector:
    app: s3
  ports:
    - name: s3
      protocol: TCP
      port: 3200
      targetPort: 3200
