backend/config/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - pls-work.pls
      secretName: proto-images-tls
  rules:
    - host: pls-work.pls
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: dummy-frontend-service
                port:
                  number: 3000
          - path: /static/.*
            pathType: Prefix
            backend:
              service:
                name: dummy-frontend-service
                port:
                  number: 3000
          - path: /api/people/.*
            pathType: Prefix
            backend:
              service:
                name: people-course-service
                port:
                  number: 3100
          - path: /api/course/.*
            pathType: Prefix
            backend:
              service:
                name: people-course-service
                port:
                  number: 3100
          - path: /s3/.*
            pathType: Prefix
            backend:
              service:
                name: s3-service
                port:
                  number: 3200
